# Little2DRenderer

./: CMakeLists.txt  LICENSE  README.md  build.sh  configure.sh  run.sh
Little/: CMakeLists.txt
Little/include/: Little.h
Little/src/: Application.cpp  Application.h  CMakeLists.txt  Little.cpp  Little.h  Window.cpp  Window.h  core.h  log.h
Little/src/Events/: Event.h  KeyboardEvent.h  MouseEvent.h  WindowEvent.h
Little/src/Renderer/: Buffers.cpp  Buffers.h  OrthoCam.cpp  OrthoCam.h  Primitives.cpp  Primitives.h  Renderer.cpp  Renderer.h  RendererCommand.cpp  RendererCommand.h  Shader.h  VertexArray.cpp  VertexArray.h
Little/src/Shaders/: Circle.frag  Circle.vert  Quad.frag  Quad.vert
Sandbox/: CMakeLists.txt
Sandbox/src/: main.cpp
Sandbox/src/shaders/: green.frag  green.vert  red.fg  red.vs
